[kernel] remove the old kernel; kyo-kernel2 becomes kyo-kernel
The old kyo-kernel module is deleted (sources, its bench mirror, PendingBench,
the TestVariant generation), and kyo-kernel2 takes its place: directory,
project ids, aggregates, and prelude's dependsOn. Packages were already
kyo.kernel, so no source moves. The publishLocal and pom chains resolve
kyo-kernel to the new kernel naturally.

This also removes the dual-kernel classpath collision at the root: with one
generation of kyo.kernel.* in the build, the kyo-test runner splice can no
longer mix generations on non-JVM test classpaths.

kyo-compile-bench goes single-kernel: the old/new comparison arms collapse
into one, the kernel2 fixture override folds into the corpus, ExpansionDump
drops its kernel argument. The bench-harness skill tooling paths follow the
rename.

Also starts the diff-minimization pass against the old kernel's tree: CanLift,
ContextEffect, and Pending recover the old scaladoc where the semantics are
unchanged.

Verified: repo-wide Test/compile green on the renamed layout.